# hemdal

./: .gitignore  AGENTS.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml
.github/workflows/: deploy-web.yml
apps/desktop/: index.html  package.json  tailwind.config.js
apps/desktop/src/: App.tsx  index.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: biometric.rs  breach.rs  crypto.rs  error.rs  fuzzy.rs  http_api.rs  import.rs  lib.rs  main.rs  native_messaging.rs  sync.rs  vault.rs
apps/desktop/src/components/: ImportExport.tsx  ItemDetail.tsx  ItemForm.tsx  Layout.tsx  PasswordGenerator.tsx  SetupVault.tsx  SyncPanel.tsx  TotpDisplay.tsx  VaultDashboard.tsx  VaultUnlock.tsx
apps/extension/: manifest.json  package.json  tsconfig.json  vite.config.ts
apps/extension/src/: background.ts  content.ts
apps/extension/src/popup/: index.html  popup.tsx
apps/web/: .env.example  .gitignore  package.json  tailwind.config.ts
apps/web/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  next-minimal-server.js.nft.json  next-server.js.nft.json  prerender-manifest.js  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
apps/web/.next/cache/: .tsbuildinfo
apps/web/.next/cache/webpack/client-production/: 1.pack  2.pack  3.pack  4.pack  5.pack  6.pack
apps/web/.next/cache/webpack/edge-server-production/: index.pack
apps/web/.next/cache/webpack/server-production/: 1.pack  2.pack
apps/web/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-manifest.json  server-reference-manifest.js  server-reference-manifest.json
apps/web/.next/server/app/: _not-found.rsc  account.html  account.rsc  auth.html  auth.rsc  index.html  index.rsc  page.js  page.js.nft.json  page_client-reference-manifest.js
apps/web/.next/server/app/_not-found/: page.js  page.js.nft.json  page_client-reference-manifest.js
apps/web/.next/server/app/account/: page.js  page_client-reference-manifest.js
apps/web/.next/server/app/auth/: page.js  page.js.nft.json  page_client-reference-manifest.js
apps/web/.next/server/chunks/: 143.js  182.js  231.js  317.js  617.js
apps/web/.next/server/pages/: 404.html  500.html  _app.js  _app.js.nft.json  _document.js  _document.js.nft.json  _error.js  _error.js.nft.json
apps/web/.next/server/src/: middleware.js  middleware.js.map
apps/web/.next/static/chunks/: 43938ccf-93073fae491e3c8d.js  444-be2aedc28d459039.js  702-bc9373acb27b0b23.js  753-da94abc3bdb7d890.js  835-e91e95c20b8dfcaf.js  abf17911-ca6e0baf14659d9a.js  main-3168c0caddf18bbd.js  main-app-2b48d6875ea4aeda.js  webpack-6df3941ebc22bc8b.js
apps/web/.next/static/chunks/app/: layout-9b78e6a2e019a45f.js  page-55ee463402659ecb.js
apps/web/.next/static/css/: e62b705c60f06a95.css
apps/web/.next/static/iuDN_uNYX3tDgecGbg2jk/: _buildManifest.js
apps/web/.next/types/app/: page.ts
apps/web/.next/types/app/account/: page.ts
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/account/: page.tsx
apps/web/src/app/auth/: page.tsx
apps/web/src/components/: Download.tsx  Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  Newsletter.tsx  Security.tsx  UseCases.tsx
apps/web/src/lib/supabase/: client.ts  server.ts
apps/web/supabase/migrations/: 001_initial.sql
(+10 files in other folders)
