[workspace]
members = ["apps/desktop/src-tauri"]
resolver = "2"

[workspace.dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-build = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# Crypto & Security
argon2 = "0.5"
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"
sha1 = "0.10"
base64 = "0.22"

# Storage
rusqlite = { version = "0.31", features = ["bundled", "uuid"] }

# P2P Networking
libp2p = { version = "0.53", features = ["mdns", "noise", "tcp", "yamux"] }

# HTTP API for browser extension
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["json"] }

# CSV parsing
csv = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# TOTP / 2FA
totp-rs = { version = "5", features = ["otpauth"] }
